kube/slopsloop/slopsloop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flinkusburger-webserver-deployment
  namespace: web
spec:
  selector:
    matchLabels:
      app: flinkusburger-webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: flinkusburger-webserver
    spec:
      containers:
      - name: flinkusburger-webserver
        image: "nginx:latest"
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 64M
          limits:
            cpu: 1
            memory: 256M
        volumeMounts:
          - name: www
            mountPath: /usr/share/nginx/html
      volumes:
        - name: www
          nfs:
            server: 11.11.11.59
            path: /mnt/Array0/pod_storage/webpages/flinkusburger/birdmail

---

apiVersion: v1
kind: Service
metadata:
  name: flinkusburger-service
  namespace: web
spec:
  selector:
    app: flinkusburger-webserver
  ports:
  - name: web-port
    protocol: TCP
    port: 8080
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flinkusburger-ingress
  namespace: web
  labels:
    kcert.dev/ingress: "managed"
spec:
  rules:
    - host: www.flinkusburger.org
      http:
        paths:
          - backend:
              service:
                name: flinkusburger-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: www.slopsloop.group
      http:
        paths:
          - backend:
              service:
                name: flinkusburger-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - www.flinkusburger.org
      - www.slopsloop.group
      secretName: www-flinkusburger-tls
